Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanNumObj.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        Number var
        var:SetValue(5.0)
        return var
    end
end